--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -300,12 +300,116 @@
 <!-- Neural network - C--> 
     <a href="" target="_blank">ICONIP</a>
     |
+    <a href="" target="_blank">PRICAI</a>
+    |
+<!-- bigdata - C-->  
+    <a href="" target="_blank">IEEE BigData</a>
+    |
+    <a href="" target="_blank">IEEE BigDataService</a>
+    |
+<!-- data mining - C-->  
+    <a href="https://adma2026.github.io/" target="_blank">ADMA</a>
+    |
+    <a href="" target="_blank">APWeb-WAIM</a>
+    |
+<!-- NLP - C--> 
+    <a href="" target="_blank">IJCNLP-AACL</a>
+    |      
+    <a href="" target="_blank">NLPCC</a>
+    |
+<!-- CV -->
+    <a href="" target="_blank">PRCV</a>
+    |
+<!-- Neural network - C--> 
+    <a href="" target="_blank">ICONIP</a>
+    |
     <a href="https://ksem2026.rosc.org.cn/" target="_blank">KSEM</a>
     |
-    <a href="https://2026.eswc-conferences.org/" target="_blank">ESWC</a>
+    <a href="" target="_blank">ESWC</a>
     |
-    <a href="https://pricai.org/2025/index.php" target="_blank">PRICAI</a>
+    <a href="" target="_blank">PRICAI</a>
     |
+<!-- software engineering - C-->
+    <a href="" target="_blank">SEKE</a>
+    |
+    <a href="" target="_blank">SETTA</a>
+    |
+    <a href="" target="_blank">EASE</a>
+    |
+    <a href="" target="_blank">Internetware</a>
+    |
+    <a href="" target="_blank">QRS</a>
+    |     
+    <a href="" target="_blank">APSEC</a>
+    |
+    <a href="" target="_blank">MSR</a>
+    |
+    <a href="" target="_blank">REFSQ</a>
+    |
+    <a href="" target="_blank">ICWE</a>
+    |
+<!-- IR - C-->
+    <a href="" target="_blank">ECIR</a>
+    |
+<!-- information system - C-->
+    <a href="" target="_blank">WISE</a>
+    |
+    <a href="" target="_blank">WISA</a>
+    |
+    <a href="" target="_blank">ICKG</a>
+    | 
+<!-- computer animation - C-->
+    <a href="" target="_blank">CASA</a>
+    |
+<!-- Computational Linguistics -->
+    <a href="" target="_blank">IJCNLP-AACL</a>
+    |
+    <a href="" target="_blank">CCL</a>
+    |
+    <a href="https://sigkg.cn/ccks2026/" target="_blank">CCKS</a>
+    |
+    <a href="" target="_blank">CCIR</a>
+    |
+    <a href="" target="_blank">SMP</a>
+    |
+    <a href="" target="_blank">WASA</a>
+    |
+    <a href="" target="_blank">ICWSM</a>
+    |
+<!--  -->
+    <a href="" target="_blank">SigIR-AP</a>
+    |
+<!-- database -->
+    <a href="" target="_blank">NDBC</a>
+    |
+<!-- Multimedia Learning -->
+    <a href="" target="_blank">ACM Multimedia Asia</a>
+    |
+    <a href="" target="_blank">ChinaMM</a>
+    |
+<!-- Geographic Information Systems -->
+    <a href="" target="_blank">ACM SIGSPATIAL</a>
+    |
+    <a href="" target="_blank">SIGGRAPH Asia</a>
+    |
+<!-- NLP - others -->
+    <a href="https://www.conll.org/" target="_blank">CoNLL</a>
+    |
+    <a href="" target="_blank">INLG</a>
+    |
+<!-- software engineering - others -->
+    <a href="" target="_blank">ChinaSoft</a>
+    |
+    <a href="" target="_blank">ChinaService</a>
+    |
+    <a href="" target="_blank">ChineseCSCW</a>
+    |
+    <a href="" target="_blank">SEMANTiCS</a>
+    |
+    <a href="" target="_blank">AKBC</a>
+    |
+    <a href="" target="_blank">IJCKG</a>
+    |  
 <br/>
     <a href="https://mp.weixin.qq.com/s/pgVGV-5PKGVEnhPJzu3M9A" target="_blank">知识工场多篇论文被AAAI 2026录用</a>
     | 
