--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -354,7 +354,7 @@
 <!-- information system - C-->
     <a href="" target="_blank">WISE</a>
     |
-    <a href="" target="_blank">WISA</a>
+    <a href="https://conf.ccf.org.cn/WISA2026/paper" target="_blank">WISA</a>
     |
     <a href="" target="_blank">ICKG</a>
     | 
@@ -413,7 +413,12 @@
 <br/>
     <a href="https://mp.weixin.qq.com/s/pgVGV-5PKGVEnhPJzu3M9A" target="_blank">知识工场多篇论文被AAAI 2026录用</a>
     | 
-
+    <a href="https://mp.weixin.qq.com/s/f3pbrMdjWkN8maOMfgtdOA" target="_blank">中国科学院软件研究所中文信息处理实验室多项研究成果被期刊 TOIS 和国际会议 MLSys、ICLR 等录用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Ez4q38up_4NdGgEcba4Gcw" target="_blank">知识工场实验室多 篇论文被ICLR 2026录用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/KAj7-OvgqoEkNtyins26YQ" target="_blank">人大高瓴人工智能学院师生论文被国际学术会议ICLR 2026录用</a>
+    |
 <h4>2025</h4>
 <!-- network - A -->
     <a href="" target="_blank">IEEE INFOCOM</a>
