--- a/pages/activities.html
+++ b/pages/activities.html
@@ -97,6 +97,8 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Area Chair</h3>
 <ul>
+    <li><strong>Area Chair</strong>, The 2026 International Joint Conference on Neural Networks (<a href="https://attend.ieee.org/wcci-2026/ijcnn-2026-topics/"><strong><u><font color="#874e26">IJCNN 2026</font></u></strong></a>), MECC Maastricht, the Netherlands, June 21st-26th, 2026</li>
+
     <li><strong>Area Chair</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="https://sigkg.cn/ccks2026/"><strong><u><font color="#874e26">CCKS 2026</font></u></strong></a>), Xian, China, August 21st-23rd, 2026</li>
 
     <li><strong>Area Chair</strong>, The 2025 International Joint Conference on Neural Networks (<a href="https://2025.ijcnn.org/"><strong><u><font color="#874e26">IJCNN 2025</font></u></strong></a>), Rome, Italy, June 30-July 5, 2025</li>
